[package]
edition = "2021"
name = "rust_order_book"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "2.0"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
# serde_json = "1.0"
console = "0.15.8"
dialoguer = "0.11.0"
tokio = {version = "1", features = ["full"]}
